--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=329189913"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=184481227" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=3866834719"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=258089345" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?crc=3824530138"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_main.css?crc=44751692"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=456430689" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_main.css?crc=335716155"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=259224708" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -93,7 +93,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="clearfix grpelem shared_content" id="u13564-19" data-muse-uid="U13564" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-content-guid="u13564-19_content"><!-- content -->
        <p>Welcome to the 2019 40th Reunion website.&nbsp; Keep an eye on the <a class="nonblock" href="news.html" data-href="page:U264">News section</a> where you will find all the important information on what's happening, where and when.&nbsp; The Bookings Section will open nearer the time where you'll be able to reserve your place and pay for your tickets via PayPal.</p>
        <p>&nbsp;</p>
-       <p>This year, the main event kicks off on Friday 12th of April at the Cabarfeidh hotel for the formal reunion dinner, followed by a family fun day on the Saturday afternoon.&nbsp; The fun continues into Saturday evening where we'll have a more informal evening with a buffet and live music.&nbsp; Partners are also welcome to join in the celebrations into the wee small hours on Saturday evening.</p>
+       <p>This year, the main event kicks off on Friday 11th of April at the Cabarfeidh hotel for the formal reunion dinner, followed by a family fun day on the Saturday afternoon.&nbsp; The fun continues into Saturday evening where we'll have a more informal evening with a buffet and live music.&nbsp; Partners are also welcome to join in the celebrations into the wee small hours on Saturday evening.</p>
        <p>&nbsp;</p>
        <p>On the Sunday evening, there will be one final opportunity to meet up with classmates at the M.A. Macleod Memorial Hall for a fellowship and some refreshments.</p>
        <p>&nbsp;</p>
@@ -105,7 +105,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="1008" data-content-above-spacer="1008" data-content-below-spacer="165" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer shared_content" data-offset-top="1008" data-content-above-spacer="1008" data-content-below-spacer="165" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="page_1_content"></div>
     <div class="browser_width grpelem" id="u144-bw">
      <div class="gradient" id="u144"><!-- group -->
       <div class="clearfix" id="u144_align_to_page">
@@ -113,7 +113,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <p>&nbsp;© 2018-2019 Lewis and Harris 40th Reunion Committee (2019). All Rights Reserved.</p>
        </div>
        <div class="clip_frame grpelem" id="u65379"><!-- image -->
-        <img class="block temp_no_img_src" id="u65379_img" data-orig-src="images/logo%20spark.png?crc=273978605" alt="" data-heightwidthratio="1.0305343511450382" data-image-width="131" data-image-height="135" src="images/blank.gif?crc=4208392903"/>
+        <img class="block temp_no_img_src" id="u65379_img" data-orig-src="images/logo%20spark.png?crc=203974211" alt="" data-heightwidthratio="1.0298507462686568" data-image-width="134" data-image-height="138" src="images/blank.gif?crc=4208392903"/>
        </div>
       </div>
      </div>
@@ -165,13 +165,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <span class="clearfix colelem placeholder" data-placeholder-for="pu12454_content"><!-- placeholder node --></span>
     </div>
-    <div class="verticalspacer" data-offset-top="1033" data-content-above-spacer="1033" data-content-below-spacer="165" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <span class="verticalspacer placeholder" data-placeholder-for="page_1_content"><!-- placeholder node --></span>
     <div class="browser_width grpelem temp_no_id" data-orig-id="u144-bw">
      <div class="gradient temp_no_id" data-orig-id="u144"><!-- group -->
       <div class="clearfix temp_no_id" data-orig-id="u144_align_to_page">
        <span class="clearfix grpelem placeholder" data-placeholder-for="u173-4_content"><!-- placeholder node --></span>
        <div class="clip_frame grpelem temp_no_id" data-orig-id="u65379"><!-- image -->
-        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=273978605" alt="" data-heightwidthratio="1.0338983050847457" data-image-width="118" data-image-height="122" data-orig-id="u65379_img" src="images/blank.gif?crc=4208392903"/>
+        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=203974211" alt="" data-heightwidthratio="1.0338983050847457" data-image-width="118" data-image-height="122" data-orig-id="u65379_img" src="images/blank.gif?crc=4208392903"/>
        </div>
       </div>
      </div>
@@ -204,7 +204,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="clearfix temp_no_id" data-orig-id="u144_align_to_page">
        <span class="clearfix grpelem placeholder" data-placeholder-for="u173-4_content"><!-- placeholder node --></span>
        <div class="clip_frame grpelem temp_no_id" data-orig-id="u65379"><!-- image -->
-        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=273978605" alt="" data-heightwidthratio="1.037037037037037" data-image-width="81" data-image-height="84" data-orig-id="u65379_img" src="images/blank.gif?crc=4208392903"/>
+        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=203974211" alt="" data-heightwidthratio="1.037037037037037" data-image-width="81" data-image-height="84" data-orig-id="u65379_img" src="images/blank.gif?crc=4208392903"/>
        </div>
       </div>
      </div>
@@ -235,7 +235,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="clearfix temp_no_id" data-orig-id="u144_align_to_page">
        <span class="clearfix grpelem placeholder" data-placeholder-for="u173-4_content"><!-- placeholder node --></span>
        <div class="clip_frame grpelem temp_no_id" data-orig-id="u65379"><!-- image -->
-        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=273978605" alt="" data-heightwidthratio="1.0317460317460319" data-image-width="63" data-image-height="65" data-orig-id="u65379_img" src="images/blank.gif?crc=4208392903"/>
+        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=203974211" alt="" data-heightwidthratio="1.0317460317460319" data-image-width="63" data-image-height="65" data-orig-id="u65379_img" src="images/blank.gif?crc=4208392903"/>
        </div>
       </div>
      </div>
@@ -266,7 +266,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="clearfix temp_no_id" data-orig-id="u144_align_to_page">
        <span class="clearfix grpelem placeholder" data-placeholder-for="u173-4_content"><!-- placeholder node --></span>
        <div class="clip_frame grpelem temp_no_id" data-orig-id="u65379"><!-- image -->
-        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=273978605" alt="" data-heightwidthratio="1.0357142857142858" data-image-width="56" data-image-height="58" data-orig-id="u65379_img" src="images/blank.gif?crc=4208392903"/>
+        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=203974211" alt="" data-heightwidthratio="1.0357142857142858" data-image-width="56" data-image-height="58" data-orig-id="u65379_img" src="images/blank.gif?crc=4208392903"/>
        </div>
       </div>
      </div>
@@ -294,7 +294,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="clearfix temp_no_id" data-orig-id="u144_align_to_page">
        <span class="clearfix grpelem placeholder" data-placeholder-for="u173-4_content"><!-- placeholder node --></span>
        <div class="clip_frame grpelem temp_no_id" data-orig-id="u65379"><!-- image -->
-        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=273978605" alt="" data-heightwidthratio="1.0303030303030303" data-image-width="33" data-image-height="34" data-orig-id="u65379_img" src="images/blank.gif?crc=4208392903"/>
+        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo%20spark.png?crc=203974211" alt="" data-heightwidthratio="1.0303030303030303" data-image-width="33" data-image-height="34" data-orig-id="u65379_img" src="images/blank.gif?crc=4208392903"/>
        </div>
       </div>
      </div>
